# dsm-to-smt

./: README.md  data_cleaned.csv  pyproject.toml  stones_cleaned.csv
src/: main.ipynb  s.py
src/content/: data.csv  obstacle.csv  stones.csv
src/experiments/: bag_pile.py  datatypes.py  kettle.py
